--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
     "express": "4.15.4",
-    "extract-text-webpack-plugin": "3.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "moment": "2.18.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
@@ -39,16 +40,16 @@
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "8.0.0",
-    "webpack": "^3.1.0"
+    "webpack": "^4.41.5"
   },
   "devDependencies": {
-    "webpack-cli": "^3.0.8",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
     "jest": "20.0.4",
     "react-test-renderer": "16.0.0",
-    "webpack-dev-server": "3.0.0"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
   "engines": {
     "node": "10.8.0"
