--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "0.28.4",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "firebase": "^7.7.0",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "2.19.3",
     "node-sass": "4.5.3",
